# src/route/job.js
@@ -1,12 +1,13 @@
 import express from 'express';
 import jobController from '../controller/jobController';
+import checkAuth from '../middleware/checkAuth';
 const router = express.Router();
-
-router.get('/alo', jobController.index);
 
 router.post('/createFromJob', jobController.createFromJob);
 
-router.get('/AllFormJob', jobController.getAllFormJob);
+router.get('/AllFormJob', checkAuth.checkRole(3), jobController.getAllFormJob);
+
+router.get('/AllFormJobUser', jobController.getAllFormJobByIdUser);
 
 router.get('/:id/editFormJob', jobController.editFormJob);
 
