# src/route/review.js
@@ -1,9 +1,20 @@
 import express from 'express';
 import reviewController from '../controller/reviewController';
+import checkAuth from '../middleware/checkAuth';
 const router = express.Router();
 
 
-router.get('/alo', reviewController.index);
+router.post('/createFormReview', reviewController.createFormReview);
+
+router.get('/AllFormReview', checkAuth.checkRole(3), reviewController.getAllFormReview);
+
+router.get('/AllFormReviewUser', reviewController.getAllFormReviewById);
+
+router.get('/:id/editFormReview', reviewController.editFormReview);
+
+router.put('/:id/updateFormReview', reviewController.updateFormReview);
+
+router.delete('/:id/deleteFormReview', reviewController.deleteFormReview);
 
 
 module.exports = router;
